1st item finished

--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
             <h4>Problem solving</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quos blanditiis ducimus necessitatibus
                 voluptatum doloremque harum quidem sit labore amet?</p>
+            <a class="Link-Button" target="_blank"href="https://www.linkedin.com/in/mojaer-ahmed-2793a41a9/">Linked In</a>
         </div>
 
         <div class="Head-item2">
