--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,21 @@
 
     </section>
 
+    <section class="Head-container">
+        <div class="Head-item1">
+            <h1>Programing</h1>
+            <h4>C , Python , Javascreept</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quos blanditiis ducimus necessitatibus
+                voluptatum doloremque harum quidem sit labore amet?</p>
+            <a class="Link-Button" target="_blank"href="https://www.linkedin.com/in/mojaer-ahmed-2793a41a9/">Linked In</a>
+        </div>
+
+        <div class="Head-item2">
+            <img src="images/profile.png" alt="this is profile">
+        </div>
+
+    </section>
+
 </body>
 
 </html>
