--- a/Index.html
+++ b/Index.html
@@ -19,31 +19,52 @@
             <h1><span style="color: rgb(156, 115, 37);"> Mojaer</span> Portfolio</h1>
 
             <h4>Problem solving</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quos blanditiis ducimus necessitatibus
+            <p id="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quos blanditiis ducimus necessitatibus
                 voluptatum doloremque harum quidem sit labore amet?</p>
-            <a class="Link-Button" target="_blank"href="https://www.linkedin.com/in/mojaer-ahmed-2793a41a9/">Linked In</a>
+            <a class="Link-Button" target="_blank" href="https://www.linkedin.com/in/mojaer-ahmed-2793a41a9/">Linked
+                In</a>
         </div>
 
         <div class="Head-item2">
-            <img src="images/profile.png" alt="this is profile">
+            <img id="first-img" src="images/profile2.jpg" alt="this is profile">
         </div>
 
     </section>
 
-    <section class="Head-container">
-        <div class="Head-item1">
+    <section class="second-container">
+        <div class="second-item2">
+            <img id="second-img" src="images/profile.png" alt="this is profile">
+        </div>
+
+        <div class="second-item1">
             <h1>Programing</h1>
             <h4>C , Python , Javascreept</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quos blanditiis ducimus necessitatibus
-                voluptatum doloremque harum quidem sit labore amet?</p>
-            <a class="Link-Button" target="_blank"href="https://www.linkedin.com/in/mojaer-ahmed-2793a41a9/">Linked In</a>
-        </div>
-
-        <div class="Head-item2">
-            <img src="images/profile.png" alt="this is profile">
+            <p id="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt harum eaque, tempore dolore cumque
+                deserunt suscipit itaque, maxime molestias porro repudiandae veniam deleniti. Tempora necessitatibus
+                odit, a hic reprehenderit delectus.</p>
+            <a class="Link-Button" target="_blank" href="https://github.com/Mojaer">Git-Hub</a>
         </div>
 
     </section>
+
+    <section class="end-container">
+        <div class="End-item1 boxes">
+            <h1>Entry Level Programmer</h1>
+            <h4 style="color: rgb(156, 115, 37);">2022-2023 || programing hero learner</h4>
+            <p id="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse inventore autem magni optio doloremque labore necessitatibus illo corrupti quas sequi.</p>
+        </div>
+
+        <div class="End-item2 boxes">
+            <h1>Intermediare Level Programmer</h1>
+            <h4 style="color: rgb(156, 115, 37);">2023-present || web dev expert</h4>
+            <p id="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse inventore autem magni optio doloremque labore necessitatibus illo corrupti quas sequi.</p>
+        </div>
+
+    </section>
+
+    <footer>
+        <p style="text-align: center;color: gray;">@All right reserved</p>
+    </footer>
 
 </body>
 
